<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@id/string1Input"
                android:text="@string/enter_first_string" />

            <EditText
                android:id="@+id/string1Input"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight=".25"
                android:autofillHints=""
                android:background="#3103A9F4"
                android:ems="5"
                android:inputType="text"
                android:padding="5dp"
                android:textSize="12sp"
                tools:ignore="VisualLintTextFieldSize" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@id/string2Input"
                android:text="@string/enter_second_string" />

            <EditText
                android:id="@+id/string2Input"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight=".25"
                android:autofillHints=""
                android:background="#3103A9F4"
                android:ems="10"
                android:inputType="text"
                android:padding="5dp"
                android:textSize="12sp"
                tools:ignore="VisualLintTextFieldSize" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/addStringsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:singleLine="false"
                android:text="@string/add_strings"
                android:textSize="12sp" />

            <Button
                android:id="@+id/compareStringsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:singleLine="false"
                android:text="@string/compare_strings"
                android:textSize="12sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/countVowelsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/count_vowels"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/outputField"
                android:text="@string/output" />

            <TextView
                android:id="@+id/outputField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#410037FF"
                android:padding="10dp" />
        </TableRow>
    </TableLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>